# northwind-data-vault-platform

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.dbt/: profiles.yml
.github/workflows/: test.yml
assets/: data_infrastructure.py
ecommerce_dbt/: dbt_project.yml
ecommerce_dbt/models/raw/: orders.sql
ecommerce_dbt/models/staging/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  (+1 more)
northwind_dbt/: dbt_project.yml
northwind_dbt/.dbt/: profiles.yml
northwind_dbt/aws/: README.md  dbt_project.yml
northwind_dbt/macros/: snowflake_create_all_external_tables.sql  snowflake_create_external_table.sql  snowflake_generate_from_catalog.sql
northwind_dbt/snowflake/: README.md  dbt_project.yml
sql/: README.md  create_tables.sql  ingest_data.sql  snowflake_terragrunt_role.sql
sql/snowflake/: masking_policy_test_queries.sql  snowflake_terragrunt_role.sql
terraform/: aurora.tf  glue_job.tf  s3_buckets.tf  variables.tf  vpc.tf
terraform/aurora_cluster/: aurora.tf  credentials.tf  outputs.tf  variables.tf
terraform/aws/: aurora.tf  glue_job.tf  outputs.tf  s3_buckets.tf  snowflake.tf  variables.tf  vpc.tf
terraform/glue_job/: glue.tf  iam.tf  variables.tf
terraform/snowflake/: snowflake_database.tf  snowflake_integrations.tf  snowflake_roles.tf  snowflake_tags_masks.tf  snowflake_wh.tf  variables.tf
terragrunt/: terragrunt.hcl
terragrunt/dev/: aws_provider.hcl  snowflake_provider.hcl  terragrunt.hcl
(+149 files in other folders)
